footie_scores/app/static/styles.css
* {
    margin: 0;
    padding: 0;
    font-family: Arime, sans-serif;
    box-sizing: border-box;
}

body {
    /* background: LightGrey; */
    background: Gainsboro;
}


.competition {
    width: 80%;
    position: relative;
    top: 50px;
    margin: auto;
    margin-top: 30px;
    margin-bottom: 30px;
    padding: 15px;
    background: #bdc1c5;
    border-radius: 4px;
    font-size: 24px;
    text-transform: uppercase;
    color: DodgerBlue;
    font-style: italic;
}

.game {
    position: static;
    width: 80%;
    padding-bottom: 15px;
    margin: auto;
    margin-top: 15px;
    margin-bottom: 15px;
    background: white;
    border-radius: 4px;
    padding-top: 15px;
    text-transform: none;
    font-style: normal;
    /* overflow: auto; */
}

.score {
    width: 100%;
    /* white-space: nowrap; */
}

.home_team, .away_team, .scoreline {
    width: 42.5%;
    text-align: right;
    padding-right: 5px;
    display: inline-block;
}

.home_team {
    float: left;
}

.away_team {
    text-align: left;
    padding-right: 0px;
    padding-left: 5px;
    float: right;
}

.scoreline {
    width: 15%;
    text-align: center;
    padding-right: 0px;
}

.events {
    position: relative;
    color: #716d6d;
    width: 100%;
    white-space: nowrap;
    padding-top: 5px;
    display: inline-block;
}

.home_events, .away_events  {
    width: 45%;
    font-size: 12px;
    line-height: 1.4em;
    white-space: normal;
    vertical-align: top;
    overflow: auto;
}

.home_events  {
    text-align: right;
    padding-right: 5px;
    position: relative;
    float: left;
}
.away_events  {
    text-align: left;
    padding-left: 5px;
    position: relative;
    float: right;
}

.match_details, a {
    margin-right: 5px;
    float: right;
    text-align: center;
    font-size: 14px;
    text-decoration: none;
    color: DarkOrange;
}

